fixed locale selector extra margin

--- a/src/app/feature/components/ddx-navbar/ddx-navbar.component.scss
+++ b/src/app/feature/components/ddx-navbar/ddx-navbar.component.scss
@@ -192,8 +192,6 @@
       align-items: center;
 
       #auth-buttons__container {
-        margin-inline-start: 40px;
-
         .auth-button {
           height: max-content;
           margin: 2px;
